# soundpanel

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  about.cpp  about.h  acinclude.m4  array_button.cpp  array_button.h  audiosettings.cpp  audiosettings.h  audiosettingsdialog.cpp  audiosettingsdialog.h  autogen.sh  cardselector.cpp  cardselector.h  cddblookup.cpp  cddblookup.h  cddbrecord.cpp  cddbrecord.h  cdplayer.cpp  cdplayer.h  conf.cpp  conf.h  configure.ac  configure.in  defaults.h  edit_button.cpp  edit_button.h  edit_devices.cpp  edit_devices.h  edit_editor.cpp  edit_editor.h  edit_general.cpp  edit_general.h  edit_ripper.cpp  (+57 more)
